# fetpapi

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  azure-pipelines.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: github-actions.yml  release.workflow.yml
cmake/: AssemblyInfo.cs  FetpapiClientUsingFesapi.java  FetpapiConfig.cmake  fetpapiCs.csproj.template  fetpapiCsWithFesapi.csproj.template  fetpapiCsWithoutFesapi.csproj.template  macroDefinitions.h.in  nsDefinitions.h  pyproject.toml.in  setup_etp.py.in  swigEtp1_2Include.i.in
cmake/modules/: FindAVRO.cmake  FindFESAPI.cmake  FindWINTLS.cmake
cs/: CMakeLists.txt
doc/: Doxyfile.in  mainpage.md
example/withFesapi/: CMakeLists.txt  etpClient.cpp
example/withoutFesapi/: CMakeLists.txt  MyOwnCoreProtocolHandlers.cpp  MyOwnCoreProtocolHandlers.h  MyOwnDiscoveryProtocolHandlers.cpp  MyOwnDiscoveryProtocolHandlers.h  MyOwnStoreNotificationProtocolHandlers.h  MyOwnStoreProtocolHandlers.cpp  MyOwnStoreProtocolHandlers.h  etpClient.cpp
java/: CMakeLists.txt
python/: .gitignore  BUILD.md  CMakeLists.txt  README.md
python/example/: PutHorizon.ipynb  etp_client_example.py  fetpapi.ipynb
src/: CMakeLists.txt  nsDefinitions.h
src/etp/: AbstractClientSession.h  AbstractClientSessionCRTP.h  AbstractPlainOrSslServerSession.h  AbstractSession.cpp  AbstractSession.h  CMakeLists.txt  ClientSession.h  ClientSessionLaunchers.cpp  ClientSessionLaunchers.h  DataArrayBlockingSession.h  EtpHelpers.cpp  EtpHelpers.h  EtpMessages.h  HttpClientSession.h  InitializationParameters.cpp  InitializationParameters.h  PlainClientSession.cpp  PlainClientSession.h  PlainServerSession.cpp  PlainServerSession.h  Server.h  ServerInitializationParameters.cpp  ServerInitializationParameters.h
src/etp/ProtocolHandlers/: BlockingDataArrayHandlers.h  CMakeLists.txt  CoreHandlers.cpp  CoreHandlers.h  DataArrayHandlers.cpp  DataArrayHandlers.h  DataspaceHandlers.cpp  DataspaceHandlers.h  DiscoveryHandlers.cpp  DiscoveryHandlers.h  GetFullDataArrayHandlers.h  ProtocolHandlers.cpp  ProtocolHandlers.h  StoreHandlers.cpp  StoreHandlers.h  StoreNotificationHandlers.cpp  StoreNotificationHandlers.h  StoreOSDUHandlers.cpp  StoreOSDUHandlers.h  TransactionHandlers.cpp  TransactionHandlers.h
src/etp/fesapi/: CMakeLists.txt  FesapiHdfProxy.cpp  FesapiHdfProxy.h  FesapiHelpers.cpp  FesapiHelpers.h
src/etp/protocolHandlers/: CMakeLists.txt  CoreHandlers.cpp  DataArrayHandlers.cpp  DataspaceHandlers.cpp  DataspaceOSDUHandlers.cpp  DataspaceOSDUHandlers.h  DiscoveryHandlers.cpp  ProtocolHandlers.cpp  ProtocolHandlers.h  StoreHandlers.cpp  StoreHandlers.h  StoreNotificationHandlers.h  TransactionHandlers.h
src/etp/ssl/: CMakeLists.txt  HttpsClientSession.h  SslClientSession.cpp  SslClientSession.h  SslServerSession.cpp  SslServerSession.h
src/tools/: CMakeLists.txt
swig/: swigEtp1_2Include.i
test/: CMakeLists.txt  unitTest.cpp
